--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,18 @@
   outline: 0px dotted;
 }
 
+
+
+//.cdk-program-focused:hover {
+//  background: rgb(43, 43, 43) !important;
+//  background-color: rgb(43, 43, 43) !important;
+//}
+
+//.cdk-program-focused:focus {
+//  background: rgb(43, 43, 43) !important;
+//  background-color: rgb(43, 43, 43) !important;
+//}
+
 .spacer {
   flex: 1 1 auto;
 }
