--- a/src/app/ideas/the-dashboard/the-dashboard.component.html
+++ b/src/app/ideas/the-dashboard/the-dashboard.component.html
@@ -28,8 +28,8 @@
 
 
 
+  <!--invisible fake button-->
   <button #fake mat-flat-button></button>
-
   <!--navigation bar -->
   <mat-toolbar color="primary">
 
