--- a/src/app/ideas/the-dashboard/the-dashboard.component.scss
+++ b/src/app/ideas/the-dashboard/the-dashboard.component.scss
@@ -13,6 +13,7 @@ $main-progress-height: 3px;
   margin-top: 3px !important;
 }
 
+.fake-chip { background: $the-bg-color !important; }
 
 
 .the-sidenav-menu {
@@ -49,7 +50,7 @@ $main-progress-height: 3px;
 
 #the-sidenav {
   border: 0px solid;
-  padding: 17px 5px 0px 0px;
+  padding: 17px 20px 0px 0px;
   width: 230px;
   background: $the-bg-color;
 
@@ -86,7 +87,8 @@ $main-progress-height: 3px;
 
 #mainContentContainerId {
   background: $the-bg-color;
-  padding: 19px 24px 24px 29px;
+  //padding: 23px 24px 24px 29px;
+  padding: 29px 24px 24px 29px;
 }
 
 
