fixing my styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 .mat-button, .mat-flat-button, .mat-raised-button, .mat-stroked-button {
-  border-radius: 50px !important;
-  padding: 0 20px !important;
+  //border-radius: 50px !important;
+  //padding: 0 20px !important;
+  padding: 0 15px !important;
 }
 
 
